# bpfrx

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  _Log.md  go.mod  go.sum
dpdk_worker/: conntrack.c  counters.h  events.h  filter.c  forward.c  gc.c  main.c  meson.build  nat.c  nat64.c  parse.c  pipeline.c  policer.c  policy.c  reject.c  rx_adaptive.c  rx_interrupt.c  rx_poll.c  screen.c  shared_mem.h  tables.h  zone.c
userspace-dp/: Cargo.toml  build.rs
userspace-dp/benches/: prefix_set_lookup.rs  session_table.rs  tx_kick_latency.rs
userspace-dp/csrc/: xsk_bridge.c
userspace-dp/src/: afxdp.rs  event_stream.rs  filter.rs  filter_tests.rs  flowexport.rs  flowexport_tests.rs  main.rs  main_tests.rs  nat.rs  nat64.rs  nat64_tests.rs  nat_tests.rs  nptv6.rs  nptv6_tests.rs  policy.rs  policy_tests.rs  prefix.rs  prefix_set.rs  prefix_set_tests.rs  protocol.rs  screen.rs  screen_tests.rs  server.rs  session.rs  session_tests.rs  slowpath.rs  state_writer.rs  test_zone_ids.rs  xsk_ffi.rs
userspace-dp/src/afxdp/: bind.rs  bpf_map.rs  bpf_map_tests.rs  checksum.rs  coordinator.rs  disposition.rs  ethernet.rs  flow_cache.rs  flow_cache_tests.rs  forward_request.rs  forwarding.rs  forwarding_build.rs  forwarding_build_tests.rs  frame.rs  frame_tx.rs  gre.rs  ha.rs  ha_tests.rs  icmp.rs  icmp_embed.rs  mod.rs  mpsc_inbox.rs  mpsc_inbox_tests.rs  neighbor.rs  neighbor_dispatch.rs  parser.rs  parser_tests.rs  poll_descriptor.rs  poll_stages.rs  rst.rs  session_delta.rs  session_glue.rs  session_glue_tests.rs  sharded_neighbor.rs  sharded_neighbor_tests.rs  (+11 more)
(+1687 files in other folders)
