[package]
name = "bpfrx-userspace-dp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
ctrlc = "3.5"
io-uring = "0.7"
ipnet = "2.10"
libbpf-sys = "1.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdpilone = "1.2"
